# noixle

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
backend/: backend.cpp  backend.h  command.h  commandparser.cpp  commandparser.h  filterparser.cpp  filterparser.h  imageprocessingcollection.cpp  imageprocessingcollection.h  statusbarinfo.h  timer.h
backend/image_processing/: imageprocessingcollection.cpp  imageprocessingcollection.h  jimage.cpp  jimage.h
backend/parser/: calculation_parser.cpp  calculation_parser.h  command.h  commandparser.cpp  commandparser.h  filterparser.cpp  filterparser.h
backend/timer/: timer.cpp  timer.h  timethismacro.h
frontend/: mainwindow.cpp  mainwindow.h  mainwindow.ui
frontend/widgets/: binarizewindow.cpp  binarizewindow.h  binarizewindow.ui  commandlineedit.cpp  commandlineedit.h  helpwindow.cpp  helpwindow.h  helpwindow.ui  histogramviewer.cpp  histogramviewer.h  mousetrackerpixmapitem.cpp  mousetrackerpixmapitem.h  snapshotwindow.cpp  snapshotwindow.h  snapshotwindow.ui  statusbar.cpp  statusbar.h  zoomenabledgraphicsview.cpp  zoomenabledgraphicsview.h
sample_macros/: canny_light  create_cool_art
